Issue452-PieChartTitleChange
In this commit the title of the area land use pie chart title was moved slightly to the right because it was off-center. For more information refer to #Issue452.

--- a/htmlFrames/style_resultFrame.css
+++ b/htmlFrames/style_resultFrame.css
@@ -444,7 +444,12 @@ text {
   * The value for "left" was changed to have the title more centered in the mupltiplayer results page,left was previously "64%"
   * For more information refer to Issue 386.
   */
-  left: 35%;
+
+  /*
+  * The value for left was changed to 38% from 35% because it was a little off-center.
+  * This change was done for Issue 452.
+  */
+  left: 38%;
   font-size: 20px;
   font-weight: bold;
   position: relative;
